--- a/country app/src/App.css
+++ b/country app/src/App.css
@@ -78,3 +78,11 @@
   animation: spin-pulse 1s linear infinite;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
